--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,4 @@
 idf_component_register(SRCS "main.c"
-                    INCLUDE_DIRS ".")
+                            "start_configuration_sequence/tcp_server.c"
+                    INCLUDE_DIRS "."
+                                 "./start_configuration_sequence")
